goaのdocker環境構築

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: '3.7'
 services:
+  api:
+    build:
+      context: ./docker/go
+      dockerfile: Dockerfile
+      # target: dev
+    tty: true
+    stdin_open: true
+    volumes:
+      - ./api:/go/src/app
+    ports:
+      - 3000:3000
+    extra_hosts:
+      - localhost:172.18.0.1
   client:
     build:
       context: ./docker/client/
