--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 version: '3.7'
 services:
+  db:
+    image: mysql:8.0
+    platform: linux/x86_64
+    ports:
+      - '3306:3306'
+    environment:
+      - MYSQL_ROOT_PASSWORD
+      - MYSQL_DATABASE
+      - MYSQL_USER
+      - MYSQL_PASSWORD
+    restart: always
+    volumes:
+      - ./db-goa-next:/var/lib/mysql
   api:
     build:
       context: ./docker/go
       dockerfile: Dockerfile
       # target: dev
+    environment:
+      - DRIVER
+      - DSN
     tty: true
     stdin_open: true
     volumes:
       - ./api:/go/src/app
     ports:
       - 3000:3000
+    depends_on:
+      - db
   client:
     build:
       context: ./docker/client/
