--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - MYSQL_DATABASE
       - MYSQL_USER
       - MYSQL_PASSWORD
+    container_name: db-goa
     restart: always
     volumes:
       - ./db-goa-next:/var/lib/mysql
