--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "@types/luxon": "^3.0.0",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^0.27.2",
     "luxon": "^3.0.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
