designファイルを更新する際にコンテナ内に入る必要がないため、ローカルでdesignファイルを更新できるように修正

--- a/docker/go/Dockerfile
+++ b/docker/go/Dockerfile
@@ -6,11 +6,7 @@ WORKDIR ${ROOT}
 # COPY go.mod go.sum ./
 
 # 併せて air もインストール
-RUN go install github.com/cosmtrek/air@v1.27.3 \
-    && go install github.com/shogo82148/goa-v1/...@v1
-# RUN go mod download \
-#     && go install github.com/cosmtrek/air@v1.27.3
+RUN go install github.com/cosmtrek/air@v1.27.3
 
 # airコマンドでGoファイルを起動
-# CMD ["./scripts/go-start.sh"]
 CMD ["air", "-c", ".air.toml"]
