--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "@types/luxon": "^3.0.0",
+    "@types/react-infinite-scroll-component": "^5.0.0",
     "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^0.27.2",
     "luxon": "^3.0.1",
