--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.7'
 services:
   db:
-    image: mysql:8.0
+    build:
+      context: ./docker/mysql
+      dockerfile: Dockerfile
     platform: linux/x86_64
     ports:
       - '3306:3306'
@@ -12,9 +14,9 @@ services:
       - MYSQL_PASSWORD
     container_name: db-goa
     restart: always
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
       - ./db-goa-next:/var/lib/mysql
-      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
   api:
     build:
       context: ./docker/go
