--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     platform: linux/x86_64
     ports:
-      - '3306:3306'
+      - '13306:3306'
     environment:
       - MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE
@@ -23,9 +23,12 @@ services:
       dockerfile: Dockerfile
       # target: dev
     environment:
-      - DRIVER
-      - DSN
       - END_POINT
+      - MYSQL_DATABASE
+      - MYSQL_USER
+      - MYSQL_PASSWORD
+      - MYSQL_PORT
+      - MYSQL_HOST
     tty: true
     stdin_open: true
     volumes:
