--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -17,14 +17,13 @@ jobs:
         with:
           go-version: 1.19
 
-      - name: move api directory
-        run: cd api/
-
       - name: Build
         run: go build -v ./...
+        working-directory: ./api
 
       - name: Test
         run: go test -v ./...
+        working-directory: ./api
         env:
           MYSQL_DATABASE: test_db
           MYSQL_ROOT_USER: root
