fix_root_password

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -2,7 +2,7 @@ name: api-test
 on:
   push:
     branches:
-     - main
+      - main
   pull_request:
 
 jobs:
@@ -27,8 +27,8 @@ jobs:
         run: go test -v ./...
         working-directory: ./api
         env:
-          MYSQL_DATABASE: test_db
+          MYSQL_DATABASE: db
           MYSQL_ROOT_USER: root
-          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_LOCAL_PORT: 3306
           MYSQL_LOCAL_HOST: 127.0.0.1
