CIでテストを実行する際にvetも実行する

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -24,7 +24,9 @@ jobs:
         working-directory: ./api
 
       - name: Test
-        run: go test -v ./...
+        run: |
+          go test -v ./...
+          go vet ./...
         working-directory: ./api
         env:
           MYSQL_DATABASE: db
