--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,48 +9,9 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+      - name: move directory
+        working-directory: ./api
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v2
         with:
           go_version: "1.19"
-
-  # Use golint via golangci-lint binary with "warning" level.
-  golint:
-    name: runner / golint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - name: golint
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          golangci_lint_flags: "--disable-all -E golint"
-          tool_name: golint # Change reporter name.
-          level: warning # GitHub Status Check won't become failure with this level.
-
-  # You can add more and more supported linters with different config.
-  errcheck:
-    name: runner / errcheck
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - name: errcheck
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          golangci_lint_flags: "--disable-all -E errcheck"
-          tool_name: errcheck
-          level: info
-
-  # Disable cache of golangci-lint result, go build and go dependencies
-  with_cache:
-    name: runner / errcheck
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-
-      - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          cache: false
