--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -4,13 +4,15 @@ on: [pull_request]
 
 jobs:
   golangci-lint:
-    name: runner / golangci-lint
+    name: golangci-lint
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
-      - name: golangci-lint
+
+      - name: run golangci-lint
+        working-directory: ./api
         uses: reviewdog/action-golangci-lint@v2
         with:
-          go_version: '1.19'
-        working-directory: ./api
+          reporter: github-pr-review
+          level: warning
