--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -7,13 +7,14 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-        working-directory: ./api
-
-      - name: run golangci-lint
-        uses: reviewdog/action-golangci-lint@v2
+      - uses: actions/setup-go@v3
         with:
-          reporter: github-pr-review
-          level: warning
+          go-version: 1.19
+      - uses: actions/checkout@v3
+
+      - name: Install golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.33.0
+        working-directory: ./api
+      - name: golangci-lint
+        run: golangci-lint run
         working-directory: ./api
