--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -16,5 +16,5 @@ jobs:
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.33.0
         working-directory: ./api
       - name: golangci-lint
-        run: golangci-lint run
+        run: golangci-lint run ./...
         working-directory: ./api
