確認コマンドの追記

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.33.0
         working-directory: ./api
+      - name: check
+        run: golangci-lint --version \ ls -l
+        working-directory: ./api
       - name: golangci-lint
         run: golangci-lint run ./...
         working-directory: ./api
