--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -7,20 +7,33 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v3
+
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
         with:
           go-version: 1.19
-      - uses: actions/checkout@v3
 
       - name: Install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.33.0
         working-directory: ./api
+
+      - name: Build
+        run: go build -v ./...
+        working-directory: ./api
+
       - name: check
         run: golangci-lint --version
         working-directory: ./api
+
       - name: check ls
         run: ls -a
         working-directory: ./api
+
+      - name: check go
+        run: go --version
+        working-directory: ./api
+
       - name: golangci-lint
         run: golangci-lint run ./...
         working-directory: ./api
