--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -6,34 +6,15 @@ jobs:
   golangci-lint:
     name: golangci-lint
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
 
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
+      - name: run golangci-lint
+        uses: reviewdog/action-golangci-lint@v2
         with:
-          go-version: 1.19
-
-      - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.50.1
-        working-directory: ./api
-
-      - name: Build
-        run: go build -v ./...
-        working-directory: ./api
-
-      - name: check
-        run: golangci-lint --version
-        working-directory: ./api
-
-      - name: check ls
-        run: ls -a
-        working-directory: ./api
-
-      - name: check go
-        run: go version
-        working-directory: ./api
-
-      - name: golangci-lint
-        run: golangci-lint run ./...
-        working-directory: ./api
+          reporter: github-pr-review
+          level: warning
