--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,66 +1,36 @@
 name: reviewdog
+
 on: [pull_request]
+
 jobs:
   golangci-lint:
-    name: runner / golangci-lint
+    name: golangci-lint
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./api
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          go_version: "1.19"
+      - uses: actions/checkout@v3
 
-  # Use golint via golangci-lint binary with "warning" level.
-  golint:
-    name: runner / golint
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - name: golint
-        uses: reviewdog/action-golangci-lint@v2
+      - name: Set up Go 1.19
+        uses: actions/setup-go@v3
         with:
-          golangci_lint_flags: "--disable-all -E golint"
-          tool_name: golint # Change reporter name.
-          level: warning # GitHub Status Check won't become failure with this level.
+          go-version: 1.19
 
-  # You can add more and more supported linters with different config.
-  errcheck:
-    name: runner / errcheck
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-      - name: errcheck
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          golangci_lint_flags: "--disable-all -E errcheck"
-          tool_name: errcheck
-          level: info
+      - name: Install golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.50.1
 
-  # Disable cache of golangci-lint result, go build and go dependencies
-  with_cache:
-    name: runner / errcheck
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api
-    steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+      - name: Build
+        run: go build -v ./...
+
+      - name: check
+        run: golangci-lint --version
+
+      - name: check ls
+        run: ls -a
+
+      - name: check go
+        run: go version
 
       - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v2
-        with:
-          cache: false
+        run: golangci-lint run ./...
