--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./api
     steps:
       - uses: actions/checkout@v3
 
@@ -21,13 +24,11 @@ jobs:
 
       - name: Build
         run: go build -v ./...
-        working-directory: ./api
 
       - name: Test
         run: |
           go test -v ./...
           go vet ./...
-        working-directory: ./api
         env:
           MYSQL_DATABASE: db
           MYSQL_ROOT_USER: root
