--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -30,7 +31,9 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.1.7",
     "typescript": "4.9.4"
   }
