--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint .",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
-    "check": "prettier --check ."
+    "check_pages": "prettier --check 'pages/**/*.{js,jsx,ts,tsx,json}'",
+    "check_lib": "prettier --check 'lib/**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
