--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
+    "lint_format": "eslint --fix .",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "check_pages": "prettier --check 'pages/**/*.{js,jsx,ts,tsx,json}'",
     "check_lib": "prettier --check 'lib/**/*.{js,jsx,ts,tsx,json}'"
