eslintの設定の修正

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,13 @@
 {
   "extends": ["next/core-web-vitals", "plugin:import/warnings", "prettier"],
   "rules": {
-    "import/order": ["error"]
+    "no-console": "off",
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
+        "message": "Unexpected property on console object was called"
+      }
+    ]
   }
 }
