Dockerのbuild時間などの短縮

--- a/docker/go/Dockerfile
+++ b/docker/go/Dockerfile
@@ -3,10 +3,13 @@ ENV GO111MODULE on
 ENV ROOT=/go/src/app
 
 WORKDIR ${ROOT}
-# COPY go.mod go.sum ./
+COPY ./api/go.mod ./api/go.sum ./
+RUN go mod download
 
 # 併せて air もインストール
-RUN go install github.com/cosmtrek/air@v1.27.3
+RUN go install github.com/cosmtrek/air@latest
+
+COPY ./api ./
 
 # airコマンドでGoファイルを起動
 CMD ["air", "-c", ".air.toml"]
