--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -1,2 +1,9 @@
 FROM node:14.18.0
-WORKDIR /usr/src/app
+ENV ROOT=/usr/src/app
+
+WORKDIR ${ROOT}
+COPY ./client/package.json ./client/yarn.lock ./
+RUN yarn install
+
+COPY ./client ./
+CMD ["yarn", "dev"]
