--- a/api/.air.toml
+++ b/api/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/main ./webapi"
+cmd = "go build -o ./tmp/main ./cmd/webapi"
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary, can setup environment variables when run your app.
