--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,9 @@ updates:
     schedule:
       interval: "weekly"
     target-branch: develop
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update-:semver-major"]
     open-pull-requests-limit: 10
     reviewers:
       - kod-source
