--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,9 +22,9 @@ updates:
     schedule:
       interval: "weekly"
     target-branch: develop
-    allow:
-      - dependency-type: "direct"
-        update-types: ["minor", "patch"]
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
     open-pull-requests-limit: 10
     reviewers:
       - kod-source
