--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,22 +9,18 @@ updates:
     directory: "api/"
     schedule:
       interval: "weekly"
-    target-branch: develop
+    target-branch: main
     ignore:
       # 更新頻度がﾔﾊﾞｲのでminorバージョンアップ毎に更新
       - dependency-name: github.com/aws/aws-sdk-go
         update-types: ["version-update:semver-patch"]
     open-pull-requests-limit: 10
-    reviewers:
-      - kod-source
   - package-ecosystem: "npm"
     directory: "client/"
     schedule:
       interval: "weekly"
-    target-branch: develop
+    target-branch: main
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
     open-pull-requests-limit: 10
-    reviewers:
-      - kod-source
